--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
         <!-- Socials-->
         <section class="page-section bg-primary text-white" id="follow-us">
-            <div class="container align-content-center">
+            <div class="container justify-content-center">
                 <h2 class="text-center mt-0">Follow us!</h2>
                 <hr class="divider light my-4" />
                 <div class="row">
@@ -142,7 +142,7 @@
         </section>
         <!-- Board -->
         <section class="page-section" id="board">
-            <div class="container align-content-center">
+            <div class="container justify-content-center">
                 <div class="row">
                     <div class="col-lg-6 col-lg-2">
                         <h2 class="section-heading">Board</h2>
