--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="container justify-content-center">
                 <h2 class="text-center mt-0">Follow us!</h2>
                 <hr class="divider light my-4" />
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <a href="https://twitter.com/CBioVikings"> <i class="fab fa-4x fa-twitter text-white mb-4"></i></a>
@@ -143,11 +143,9 @@
         <!-- Board -->
         <section class="page-section" id="board">
             <div class="container justify-content-center">
-                <div class="row">
-                    <div class="col-lg-6 col-lg-2">
-                        <h2 class="section-heading">Board</h2>
-                        <hr>
-                    </div>
+                <div class="col-lg-6 col-lg-2">
+                    <h2 class="section-heading">Board</h2>
+                    <hr>
                 </div>
                 <div class="row">
                     <div class="col-lg-2 text-center">
