--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Next event</h2>
                         <hr class="divider light my-4" />
-                        <!--<p class="text-white-50 mb-4">CBioVikings</p> -->
+                        <!--<p class="text-white-50 mb-4">CBioVikings</p>CBioVikings</p> -->
                         <!--No upcoming events. Please <a class="page-scroll" style='color: #F75D45' href="#followus">follow us</a> to stay updated.-->
                         <img src="assets/img/events/NCBTalks_SeqMotif.jpg" style="width: 80%; margin-bottom: 25px">
                     </div>
@@ -118,20 +118,20 @@
         </section>
         <!-- Socials-->
         <section class="page-section bg-primary text-white" id="follow-us">
-            <div class="container justify-content-center">
+            <div class="container text-center">
                 <h2 class="text-center mt-0">Follow us!</h2>
                 <hr class="divider light my-4" />
                 <div class="row justify-content-center">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <a href="https://twitter.com/CBioVikings"> <i class="fab fa-4x fa-twitter text-white mb-4"></i></a>
-                            <a href="https://twitter.com/CBioVikings">@CBioVikings</a>
+                            <a href="https://twitter.com/CBioVikings"> <p class="text-white-50 mb-4"> @CBioVikings</p></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <a href="https://www.instagram.com/cbiovikings/"> <i class="fab fa-4x fa-instagram text-white mb-4"></i></a>
-                            <a href="https://www.instagram.com/cbiovikings/">@CBioVikings</a>
+                            <a href="https://www.instagram.com/cbiovikings/"> <p class="text-white-50 mb-4"> @CBioVikings</p></a>
                         </div>
                     </div>
                 </div>
@@ -143,11 +143,11 @@
         <!-- Board -->
         <section class="page-section" id="board">
             <div class="container justify-content-center">
-                <div class="col-lg-6 col-lg-2">
+                <div class="col-lg-6 col-lg-2 text-center">
                     <h2 class="section-heading">Board</h2>
                     <hr>
                 </div>
-                <div class="row">
+                <div class="row text-center">
                     <div class="col-lg-2 text-center">
                         <h4>Cas Blaauw</h4>
                         <p>President</p>
@@ -161,7 +161,7 @@
                         <p>Vice-president</p>
                     </div>
                 </div><br>
-                <div class="row">
+                <div class="row text-center">
                     <div class="col-lg-2 text-center">
                         <h4>Leonor Rib</h4>
                         <p>Core Member</p>
