--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
         </section>
         <!-- Board -->
         <section class="page-section" id="board">
-            <div class="container justify-content-center">
-                <div class="row text-center">
-                    <div class="col-lg-6 col-lg-2 text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 text-center">
                         <h2 class="section-heading">Board</h2>
                         <hr>
                     </div>
                 </div>
-                <div class="row text-center">
+                <div class="row">
                     <div class="col-lg-2 text-center">
                         <h4>Cas Blaauw</h4>
                         <p>President</p>
