--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                            <i class="fas fa-4x fa-comments text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Meetings</h3>
+                            <p class="text-muted mb-0">Get to know other bioinformaticians from Denmark and beyond</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                            <h3 class="h4 mb-2">Knowledge</h3>
+                            <p class="text-muted mb-0">Hackathons, talks, workshops, all you need to improve your skills!</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+                            <i class="fas fa-4x fa-handshake text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Find your match</h3>
+                            <p class="text-muted mb-0">Find your next position, employee or collaborator!</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -160,7 +160,7 @@
                     </div>
                    <div class="col-lg-3 text-center">
                         <h4>Petar Todorov</h4>
-                        <p>Vice-president</p>
+                        <p>Vice-President</p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
