--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                         <hr class="divider light my-4" />
                         <!--<p class="text-white-50 mb-4">CBioVikings</p>CBioVikings</p> -->
                         <!--No upcoming events. Please <a class="page-scroll" style='color: #F75D45' href="#followus">follow us</a> to stay updated.-->
-                        <img src="assets/img/events/NCBTalks_SeqMotif.jpg" style="width: 80%; margin-bottom: 25px">
+                        <img src="assets/img/events/NordicCompBio_BioLib.png" style="width: 80%; margin-bottom: 25px">
                     </div>
                     <div class="col-lg-8 text-center">
-                        <a href="http://bit.ly/2OP2Pad" target="_blank" class="btn btn-light btn-md">Register now!</a>
+                        <a href="https://www.airmeet.com/e/813710b0-827b-11eb-bd09-470731bf14b4" target="_blank" class="btn btn-light btn-md">Register now!</a>
                     </div>
                 </div>
             </div>
