--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-comments text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Meetings</h3>
+                            <h3 class="h4 mb-2">Community</h3>
                             <p class="text-muted mb-0">Get to know other bioinformaticians from Denmark and beyond</p>
                         </div>
                     </div>
@@ -85,15 +85,8 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-handshake text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Find your match</h3>
+                            <h3 class="h4 mb-2">Network</h3>
                             <p class="text-muted mb-0">Find your next position, employee or collaborator!</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
                         </div>
                     </div>
                 </div>
