--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
                             <a href="https://www.instagram.com/cbiovikings/"> <p class="text-white-50 mb-4"> @cbiovikings</p></a>
                         </div>
                     </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <a href="https://www.facebook.com/CBIOVikingsDK/"> <i class="fab fa-4x fa-facebook text-white mb-4"></i></a>
+                            <a href="https://www.facebook.com/CBIOVikingsDK/"> <p class="text-white-50 mb-4"> CBioVikings</p></a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="container text-center">
