--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="container">
                 <h2 class="text-center mt-0">What we do</h2>
                 <hr class="divider my-4" />
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-comments text-primary mb-4"></i>
