--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">Bringing together young bioinformaticians across Denmark</p>
                     </div>
+                </div>
+                <div class="row justify-content-center">
                     <div class="col-lg-offset-3 text-center">
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find out more</a>
                     </div>
