--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container h-100">
-                <div class="row h-100 align-items-center justify-content-center text-center">
+                <div class="row h-70 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
                         <h1 class="text-uppercase text-white font-weight-bold">CBioVikings - RSG Denmark</h1>
                         <hr class="divider my-4" />
@@ -47,7 +47,7 @@
                         <p class="text-white-75 font-weight-light mb-5">Bringing together young bioinformaticians across Denmark</p>
                     </div>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row h-30 justify-content-center">
                     <div class="col-lg-offset-3 text-center">
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find out more</a>
                     </div>
