--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container h-100">
+            <div class="container">
                 <div class="row h-70 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
                         <img src="assets/img/cbv-logo-transp.png" style="width: 10%; margin-bottom: 25px">
