--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container">
+            <div class="container h-100">
                 <div class="row h-70 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <img src="assets/img/cbv-logo-transp.png" style="width: 10%; margin-bottom: 25px">
+                        <img src="assets/img/cbv-logo-transp.png" style="width: 20%; margin-bottom: 25px">
+                        <img src="assets/img/rsg-logo-transp.png" style="width: 20%; margin-bottom: 25px">
                         <h1 class="text-uppercase text-white font-weight-bold">CBioVikings - RSG Denmark</h1>
                         <hr class="divider my-4" />
                     </div>
