--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <div class="container h-100">
                 <div class="row h-70 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-center">
-                        <img src="assets/img/cbv-logo-transp.png" style="width: 20%; margin-bottom: 25px">
-                        <img src="assets/img/rsg-logo-transp.png" style="width: 20%; margin-bottom: 25px">
+                        <img src="assets/img/cbv-logo-transp.png" style="height:240px; margin-bottom: 25px">
+                        <img src="assets/img/rsg-logo-transp.png" style="height:240px; margin-bottom: 25px">
                         <h1 class="text-uppercase text-white font-weight-bold">CBioVikings - RSG Denmark</h1>
                         <hr class="divider my-4" />
                     </div>
@@ -53,7 +53,7 @@
                     <div class="col-lg-offset-3 text-center">
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find out more</a>
                     </div>
-                    <div class="col-lg-offset-3 text-center">
+                    <div class="col-lg-3 text-center">
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#next-event">Next event</a>
                     </div>
                 </div>
