--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container h-100">
-                <div class="row h-30 align-items-center justify-content-center text-center">
-                    <div class="col-lg-10 align-self-center">
+                <div class="row h-20 align-items-center justify-content-center text-center">
+                    <div class="col-lg-2 self-center">
                         <img src="assets/img/cbv-logo-transp.png" style="height:150px; margin-bottom: 25px">
+                    </div>
+                    <div class="col-lg-2 self-center">
                         <img src="assets/img/rsg-logo-transp.png" style="height:150px; margin-bottom: 25px">
                     </div>
                 </div>
-                <div class="row h-40 justify-content-center">
-                     <div class ="col-lg-10 align-self-center">
+                <div class="row h-60 align-items-center justify-content-center text-center">
+                     <div class ="col-lg-10 self-center">
                         <h1 class="text-uppercase text-white font-weight-bold">CBioVikings - RSG Denmark</h1>
                         <hr class="divider my-4" />
                     </div>
@@ -53,7 +55,7 @@
                         <p class="text-white-75 font-weight-light mb-5">Bringing together young bioinformaticians across Denmark</p>
                     </div>
                 </div>
-                <div class="row h-30 justify-content-center">
+                <div class="row h-20 align-items-center justify-content-center text-center">
                     <div class="col-lg-3 col-lg-offset-3 text-center">
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find out more</a>
                     </div>
