--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#next-event">Upcoming events</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#follow-us">Follow us</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#board">Board</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact-us">Contact us</a></li>
                     </ul>
                 </div>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="row h-20 align-items-center justify-content-center text-center">
                     <div class="col-lg-3 col-lg-offset-3 text-center">
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find out more</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#what-we-do">Learn more</a>
                     </div>
                     <div class="col-lg-3 text-center">
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#next-event">Next event</a>
@@ -66,18 +66,6 @@
                 </div>
             </div>
         </header>
-        <!-- About-->
-        <section class="page-section bg-primary" id="about">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Who we are</h2>
-                        <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">CBioVikings, short for Computational Biology Vikings, is a non-profit organization for students in the field of bioinformatics and computational biology. Our goals are to promote events that enable networking between students and established researchers in the field, and to help train the next generation of computational biologists in Denmark.<br>The founding board of CBioVikings was established in early 2015 by ten PhD students with diverse backgrounds in computer science, computational biology, bioinformatics and biology from DTU and UCPH. In May 2015 CBioVikings was accepted as the official International Society for Computational Biology (ISCB) Regional Student Group (RSG) in Denmark.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- What we do-->
         <section class="page-section" id="what-we-do">
             <div class="container">
@@ -194,8 +182,20 @@
                 </div>
             </div>
         </section>
+        <!-- About-->
+        <section class="page-section bg-dark text-white" id="about">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">About</h2>
+                        <hr class="divider light my-4" />
+                        <p class="text-white mb-4">CBioVikings, short for Computational Biology Vikings, is a non-profit organization for students in the field of bioinformatics and computational biology. Our goals are to promote events that enable networking between students and established researchers in the field, and to help train the next generation of computational biologists in Denmark.<br>The founding board of CBioVikings was established in early 2015 by ten PhD students with diverse backgrounds in computer science, computational biology, bioinformatics and biology from DTU and UCPH. In May 2015 CBioVikings was accepted as the official International Society for Computational Biology (ISCB) Regional Student Group (RSG) in Denmark.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Contact-->
-        <section class="page-section bg-dark text-white" id="contact-us">
+        <section class="page-section bg-primary text-white" id="contact-us">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-9 text-center">
