--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
             </div>
         </header>
         <!-- What we do-->
-        <section class="page-section" id="what-we-do">
+        <section class="page-section bg-primary text-white" id="what-we-do">
             <div class="container">
                 <h2 class="text-center mt-0">What we do</h2>
-                <hr class="divider my-4" />
+                <hr class="divider light my-4" />
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-comments text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-comments text-white mb-4"></i>
                             <h3 class="h4 mb-2">Community</h3>
                             <p class="text-muted mb-0">Get to know other bioinformaticians from Denmark and beyond</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-laptop-code text-white mb-4"></i>
                             <h3 class="h4 mb-2">Knowledge</h3>
                             <p class="text-muted mb-0">Hackathons, talks, workshops, all you need to improve your skills!</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-handshake text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-handshake text-white mb-4"></i>
                             <h3 class="h4 mb-2">Network</h3>
                             <p class="text-muted mb-0">Find your next position, employee or collaborator!</p>
                         </div>
@@ -97,24 +97,24 @@
             </div>
         </section>
         <!-- Next event-->
-        <section class="page-section bg-dark text-white" id="next-event">
+        <section class="page-section" id="next-event">
              <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Next event</h2>
-                        <hr class="divider light my-4" />
+                        <h2 class="mt-0">Next event</h2>
+                        <hr class="divider my-4" />
                         <!--<p class="text-white-50 mb-4">CBioVikings</p>CBioVikings</p> -->
                         <!--No upcoming events. Please <a class="page-scroll" style='color: #F75D45' href="#followus">follow us</a> to stay updated.-->
                         <img src="assets/img/events/NordicCompBio_BioLib.png" style="width: 80%; margin-bottom: 25px">
                     </div>
                     <div class="col-lg-8 text-center">
-                        <a href="https://www.airmeet.com/e/813710b0-827b-11eb-bd09-470731bf14b4" target="_blank" class="btn btn-light btn-md">Register now!</a>
+                        <a href="https://www.airmeet.com/e/813710b0-827b-11eb-bd09-470731bf14b4" target="_blank" class="btn btn-dark btn-md">Register now!</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Socials-->
-        <section class="page-section bg-primary text-white" id="follow-us">
+        <section class="page-section bg-dark text-white" id="follow-us">
             <div class="container text-center">
                 <h2 class="text-center mt-0">Follow us!</h2>
                 <hr class="divider light my-4" />
@@ -144,7 +144,7 @@
             </div>
         </section>
         <!-- Board -->
-        <section class="page-section" id="board">
+        <section class="page-section bg-primary text-white" id="board">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6 text-center">
@@ -183,19 +183,19 @@
             </div>
         </section>
         <!-- About-->
-        <section class="page-section bg-dark text-white" id="about">
+        <section class="page-section" id="about">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">About</h2>
-                        <hr class="divider light my-4" />
-                        <p class="text-white mb-4">CBioVikings, short for Computational Biology Vikings, is a non-profit organization for students in the field of bioinformatics and computational biology. Our goals are to promote events that enable networking between students and established researchers in the field, and to help train the next generation of computational biologists in Denmark.<br>The founding board of CBioVikings was established in early 2015 by ten PhD students with diverse backgrounds in computer science, computational biology, bioinformatics and biology from DTU and UCPH. In May 2015 CBioVikings was accepted as the official International Society for Computational Biology (ISCB) Regional Student Group (RSG) in Denmark.</p>
+                        <h2 class="mt-0">About</h2>
+                        <hr class="divider my-4" />
+                        <p class="mb-4">CBioVikings, short for Computational Biology Vikings, is a non-profit organization for students in the field of bioinformatics and computational biology. Our goals are to promote events that enable networking between students and established researchers in the field, and to help train the next generation of computational biologists in Denmark.<br>The founding board of CBioVikings was established in early 2015 by ten PhD students with diverse backgrounds in computer science, computational biology, bioinformatics and biology from DTU and UCPH. In May 2015 CBioVikings was accepted as the official International Society for Computational Biology (ISCB) Regional Student Group (RSG) in Denmark.</p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Contact-->
-        <section class="page-section bg-primary text-white" id="contact-us">
+        <section class="page-section bg-dark text-white" id="contact-us">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-9 text-center">
