--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-comments text-white mb-4"></i>
                             <h3 class="h4 mb-2">Community</h3>
-                            <p class="text-muted mb-0">Get to know other bioinformaticians from Denmark and beyond</p>
+                            <p class="mb-0">Get to know other bioinformaticians from Denmark and beyond</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-white mb-4"></i>
                             <h3 class="h4 mb-2">Knowledge</h3>
-                            <p class="text-muted mb-0">Hackathons, talks, workshops, all you need to improve your skills!</p>
+                            <p class="mb-0">Hackathons, talks, workshops, all you need to improve your skills!</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-handshake text-white mb-4"></i>
                             <h3 class="h4 mb-2">Network</h3>
-                            <p class="text-muted mb-0">Find your next position, employee or collaborator!</p>
+                            <p class="mb-0">Find your next position, employee or collaborator!</p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         <img src="assets/img/events/NordicCompBio_BioLib.png" style="width: 80%; margin-bottom: 25px">
                     </div>
                     <div class="col-lg-8 text-center">
-                        <a href="https://www.airmeet.com/e/813710b0-827b-11eb-bd09-470731bf14b4" target="_blank" class="btn btn-dark btn-md">Register now!</a>
+                        <a href="https://www.airmeet.com/e/813710b0-827b-11eb-bd09-470731bf14b4" target="_blank" class="btn btn-primary btn-md">Register now!</a>
                     </div>
                 </div>
             </div>
@@ -154,30 +154,30 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-3 text-center">
-                        <h4>Cas Blaauw</h4>
-                        <p>President</p>
+                        <h4 class="text-white-80">Cas Blaauw</h4>
+                        <p class="text-white-80">President</p>
                     </div>
                     <div class="col-lg-3 text-center">
-                        <h4>Dimitrii Borisevich</h4>
-                        <p>Treasurer</p>
+                        <h4 class="text-white-80">Dimitrii Borisevich</h4>
+                        <p class="text-white-80">Treasurer</p>
                     </div>
                    <div class="col-lg-3 text-center">
-                        <h4>Petar Todorov</h4>
-                        <p>Vice-President</p>
+                        <h4 class="text-white-80">Petar Todorov</h4>
+                        <p class="text-white-80">Vice-President</p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-3 text-center">
-                        <h4>Leonor Rib</h4>
-                        <p>Core Member</p>
+                        <h4 class="text-white-80">Leonor Rib</h4>
+                        <p class="text-white-80">Core Member</p>
                     </div>
                     <div class="col-lg-3 text-center">
-                        <h4>Mikaela Koutrouli</h4>
-                        <p>Core Member</p>
+                        <h4 class="text-white-80">Mikaela Koutrouli</h4>
+                        <p class="text-white-80">Core Member</p>
                     </div>
                     <div class="col-lg-3 text-center">
-                        <h4>Marek Prachař</h4>
-                        <p>Core Member</p>
+                        <h4 class="text-white-80">Marek Prachař</h4>
+                        <p class="text-white-80">Core Member</p>
                     </div>
                 </div>
             </div>
