--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 </div>
                 <div class="row h-60 align-items-center justify-content-center text-center">
                      <div class ="col-lg-10 self-center">
-                        <h1 class="text-uppercase text-white font-weight-bold">CBioVikings</h1>
-                         <h2 class="text-uppercase text-white font-weight-bold">RSG Denmark</h2>
+                        <h1 class="text-white font-weight-bold">CBioVikings</h1>
+                         <h3 class="text-white font-weight-bold">RSG Denmark</h2>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
